# zlib-to-rclone

./: .gitignore  CLAUDE.md  DISCORD_BOT_SETUP.md  QUICKSTART.md  RCLONE_READY.md  RCLONE_SETUP_GUIDE.md  SLASH_COMMANDS_GUIDE.md  check_setup.sh  config.bot.yaml  config.discord.example.yaml  config.example.vi.yaml  config.example.yaml  config.validation.yaml  deploy_slash_commands.sh  discord_bot.py  main.py  pyproject.toml  pytest.ini  requirements.txt
.claude/: settings.local.json
core/: error_handler.py  pipeline.py  quota_manager.py  state_manager.py  task_scheduler.py
db/: models.py
docs/: api-reference.md  system-overview.md  validation-report.md
scrapers/: douban_scraper.py
services/: calibre_service.py  lark_service.py  zlibrary_service.py
specs/001-z-library-calibre/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-z-library-calibre/contracts/: sync-service.md
specs/002-0-download-search/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-0-download-search/contracts/: download_stage.py  quota_manager.py
stages/: download_stage.py  search_stage.py
