[project]
name = "douban-zlib-calibre"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "larkpy>=0.2.2",
    "nest-asyncio>=1.6.0",
    "pytest>=8.4.1",
    "pytest-asyncio",
    "pyyaml>=6.0.2",
    "sqlalchemy>=2.0.43",
]
